melhorias nas criacao do simulado